unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/litify_docs__File_System_Preferences__c.object-meta.xml
<CustomObject>
    <description>Custom Object to support storing administrative and configuration settings.</description>
    <label>File System Preferences</label>
    <nameField>
        <displayFormat>FSP-{0000000000}</displayFormat>
        <label>File System Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File System Preferences</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>