unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Archive_Related_Files__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Archive_Related_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether we should archive child records when archiving from the UI.</description>
    <label>Archive Related Files</label>
    <type>Checkbox</type>
</CustomField>