unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Date_Format__c</fullName>
    <defaultValue>&quot;MM/DD/YYYY&quot;</defaultValue>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>