unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Deduplication__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Deduplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deduplication</label>
    <type>Checkbox</type>
</CustomField>