unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Default_Advanced_Search_View_Mode__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Advanced_Search_View_Mode__c</fullName>
    <label>Default Advanced Search View Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>