unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Default_Preview_Mode__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Default_Preview_Mode__c</fullName>
    <defaultValue>&quot;advanced&quot;</defaultValue>
    <label>Default Preview Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>