unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Email_Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Email_Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not the admin setup for email is complete.</description>
    <label>Email Setup Complete</label>
    <type>Checkbox</type>
</CustomField>