unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Fixed_Column_Headers__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Fixed_Column_Headers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decide if columns are fixed by default, for users in your organization. If selected the header row will always be visible when scrolling the file table.</description>
    <label>Fixed Column Headers</label>
    <type>Checkbox</type>
</CustomField>