unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Flatten_PDF__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Flatten_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether PDFs should be flattened by default when doing a PDF merge.</description>
    <label>Flatten PDF</label>
    <type>Checkbox</type>
</CustomField>