unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Infinite_Scroll__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Infinite_Scroll__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Decide to use infinite scroll (true) or pagination (false) for file tables.</description>
    <label>Infinite Scroll</label>
    <type>Checkbox</type>
</CustomField>