unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Inline_Action_Defaults__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Inline_Action_Defaults__c</fullName>
    <defaultValue>&quot;null,Download&quot;</defaultValue>
    <description>Actions will be stored as a comma separated text string: actionOne,actionTwo</description>
    <label>Inline Action Defaults</label>
    <length>255</length>
    <type>Text</type>
</CustomField>