unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Internal_Link_Location__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Internal_Link_Location__c</fullName>
    <defaultValue>&quot;filingCabinet&quot;</defaultValue>
    <label>Internal Link Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>