unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Read_Only_Actions__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Read_Only_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the org wants to implement read only permissions on actions.</description>
    <label>Read Only Actions</label>
    <type>Checkbox</type>
</CustomField>