unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Session_Timeout__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Session_Timeout__c</fullName>
    <description>Sets the standard session timeout in minutes so we know whether we need to refresh a users access token.</description>
    <label>Session Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>