unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Setup_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Admin Setup Wizard is complete. Endpoints are not usable (except for startSetup and completeSetup) until this is checked true.</description>
    <label>Setup Complete</label>
    <type>Checkbox</type>
</CustomField>