unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__Unzip_On_Upload__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Unzip_On_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Unzip on Upload is preferred.</description>
    <label>Unzip on Upload</label>
    <type>Checkbox</type>
</CustomField>