unpackaged/main/default/objects/litify_docs__File_System_Preferences__c/fields/litify_docs__User_Managed_Columns__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__User_Managed_Columns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users in your organization will be able to override the org. defaults set by the Admin.</description>
    <label>User_Managed_Columns__c</label>
    <type>Checkbox</type>
</CustomField>